dnl Initialise autoconf

AC_INIT()
AM_CONFIG_HEADER(config.h)

dnl Check for static build

AC_ARG_ENABLE(static-binary,[  --enable-static-binary      enable building of static binary [default=yes]],
[
    if test "$enableval" = "yes"; then
                 ac_build_static_binary="yes"
    else
                 ac_build_static_binary="no"
    fi
], [ac_build_static_binary="no"])

if test "$ac_build_static_binary" = "yes"; then
      AC_ENABLE_STATIC
fi

AM_CONDITIONAL(BUILD_STATIC, test x$ac_build_static_binary = xyes)

dnl Initialise automake

AM_INIT_AUTOMAKE(cyphesis, 0.0.16)

dnl check if user wishes maintainer-mode ("--enable-maintainer-mode = yes")
AM_MAINTAINER_MODE

AC_ARG_PROGRAM

dnl Need libtool

AM_PROG_LIBTOOL
AC_PROG_LIBTOOL

dnl Test for C++ compiler

AC_PROG_CXX

CXXFLAGS='-Wall -g -O2'

AC_PREFIX_DEFAULT("/usr/local")
AC_CHECK_FUNC(cos,,[AC_CHECK_LIB(m,cos)])

dnl Test for WorldForge Atlas Libraries

AC_LANG_CPLUSPLUS
AC_REQUIRE_CPP

AC_ARG_ENABLE(debug,[  --enable-debug           creates debugging code [default=no]],
[ 
   if test $enableval = "no"; then 
                ac_use_debug_code="no"  
   else 
                ac_use_debug_code="yes"
   fi
], [ac_use_debug_code="no"])

AC_CACHE_CHECK(for location of Atlas, cyphesis_cv_libatlas,
[
	cyphesis_cv_libatlas=/usr/local
	AC_ARG_WITH(atlas,
	[  --with-atlas=DIR           libAtlas is installed in ],
	[
		if test $withval != yes; then
			cyphesis_cv_libatlas=$withval
		fi
	])
])
dnl for some reason this only works if outside AC_CACHE_CHECK(..)
dnl (probably the check is only run if there is no config.cache file)
CPPFLAGS="$CPPFLAGS -I${cyphesis_cv_libatlas}/include"
LDFLAGS="$LDFLAGS -L${cyphesis_cv_libatlas}/lib"

AC_CACHE_CHECK(for location of python headers, cyphesis_cv_python,
[
	cyphesis_cv_python=/usr/include/python1.5
	AC_ARG_WITH(python,
	[  --with-python=DIR          python includes in ],
	[
		if test $withval != yes; then
			cyphesis_cv_python=$withval
		fi
	])
])
dnl for some reason this only works if outside AC_CACHE_CHECK(..)
dnl (probably the check is only run if there is no config.cache file)
CPPFLAGS="$CPPFLAGS -I${cyphesis_cv_python}"
AC_CACHE_CHECK(for location of python libs, cyphesis_cv_libpython,
[
	cyphesis_cv_libpython=/usr/lib/python1.5/config
	AC_ARG_WITH(pythonlib,
	[  --with-pythonlib=DIR          python includes in ],
	[
		if test $withval != yes; then
			cyphesis_cv_libpython=$withval
		fi
	])
])

LDFLAGS="$LDFLAGS -L${cyphesis_cv_libpython}"
 

AC_CACHE_VAL(cyphesis_cv_atlas_headers,
[
	atlash="$atlash Atlas/Bridge.h"
dnl	atlash="$atlash Atlas/Net/Stream.h"
	atlash="$atlash Atlas/Message/Object.h"
dnl	atlash="$atlash Atlas/Objects/Decoder.h"
    AC_CHECK_HEADERS(`echo $atlash`, [],
	[
		AC_MSG_ERROR(Couldn't find working Atlas headers.)
	])
])

AC_CACHE_VAL(cyphesis_cv_atlas_libraries,
[
	AC_CHECK_LIB(Atlas, main,
    [
        LIBS="$LIBS -lAtlasObjects"
        LIBS="$LIBS -lAtlasObjectsOperation"
        LIBS="$LIBS -lAtlasObjectsEntity"
        LIBS="$LIBS -lAtlas"
        LIBS="$LIBS -lAtlasNet"
        LIBS="$LIBS -lAtlasCodecs"
        LIBS="$LIBS -lAtlasMessage"
        LIBS="$LIBS -lAtlas"
    ],
	[
		AC_MSG_ERROR(Couldn't find working Atlas libraries.);
	])
])

AC_CACHE_VAL(cyphesis_cv_python_headers,
[
	AC_CHECK_HEADERS(Python.h, [],
	[
		AC_MSG_ERROR(Couldn't find working Python headers.)
	])
])

AC_CHECK_HEADERS(db3/db_cxx.h, ,
[
	AC_CHECK_HEADERS(db_cxx.h, ,
	[
		AC_MSG_ERROR(Couldn't find working Berkely DB v3 headers.)
	])
])

AC_CHECK_LIB(dl,dlopen)
AC_CHECK_LIB(pthread,pthread_create)

dnl AC_CHECK_LIB(sigc,main)
AM_PATH_SIGC(1.0.1,[
	CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
	LIBS="$LIBS $SIGC_LIBS"
	],
	AC_MSG_ERROR(Couldn't find libsigc++ config [or config failed])
)

AC_CHECK_LIB(varconf,main)
AC_CHECK_LIB(db,db_create)
AC_CHECK_LIB(db_cxx,main)
AC_CHECK_LIB(db3_cxx,main)
AC_CHECK_HEADERS(sstream.h)
AC_CHECK_LIB(coal,main)
AC_CHECK_LIB(coaliso,main)
AC_CHECK_LIB(termcap,tgetent)
AC_CHECK_LIB(readline,readline)

AC_CACHE_VAL(cyphesis_cv_python_libraries,
[
	AC_CHECK_LIB(python1.5, Py_Initialize, LIBS="$LIBS -lpython1.5",
	[
	 AC_CHECK_LIB(python1.6, Py_Initialize, LIBS="$LIBS -lpython1.6",
	 [
	  AC_CHECK_LIB(util, openpty)
	  AC_CHECK_LIB(python2.0, Py_Initialize, LIBS="$LIBS -lpython2.0",
	  [
	  	AC_CHECK_LIB(python2.1, Py_Initialize, LIBS="$LIBS -lpython2.1",
		  [
		  	AC_MSG_ERROR(Couldn't find working Python libraries.);
		  ])
	  ])
	 ])
	])
])

dnl Generate files
AC_OUTPUT([
	Makefile
	physics/Makefile
	common/Makefile
	modules/Makefile
	rulesets/Makefile
	rulesets/astronomy/Makefile
	rulesets/skills/Makefile
	server/Makefile
	client/Makefile
	watchdog/Makefile
	tools/Makefile
])
